# NBodySolarSys

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot_solar_system.py
include/: CelestialBody.hpp  Vector3D.hpp
src/: CelestialBody.cpp  Vector3D.cpp
